templates/besu-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: besu-node-deployment
  labels:
    app: besu-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: besu-node
  template:
    metadata:
      labels:
        app: besu-node
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: besu-node
        image: hyperledger/besu
        imagePullPolicy: Always
        ports:
        - containerPort: 8545
          name: rpc-http
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        args: ["--rpc-http-enabled","--data-path=/var/lib/besu"]
        volumeMounts:
        - name: besu-node-persistent-storage
          mountPath: /var/lib/besu
        #TODO
        #livenessProbe:
         # httpGet:
          #  path: /
           # port: 8545
          #initialDelaySeconds: 20
          #periodSeconds: 10
      volumes:
      - name: besu-node-persistent-storage
        persistentVolumeClaim:
          claimName: besu-node-pvc
