templates/alethio-explorer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alethio-explorer-ui
spec:
  selector:
    app: alethio-explorer
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
