templates/besu-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: besu-node
spec:
  selector:
    app: besu-node
  ports:
    - name: rpc-http
      port: 80
      protocol: TCP
      targetPort: rpc-http
